[package]
name = "autocast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
color-eyre = "0.6"
expectrl = "0.7.0"
itertools = "0.11.0"
os_str_bytes = { version = "6.5.1", default-features = false }
ron = "0.8.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
shlex = "1.1.0"
terminal_size = "0.2.6"
thiserror = "1.0.40"
