[package]
name = "autocast"
version = "0.1.0"
authors = ["Paul Nettleton <k9@k9withabone.dev>"]
edition = "2021"
description = "Automate terminal demos"
readme = "README.md"
repository = "https://github.com/k9withabone/autocast"
license = "GPL-3.0-or-later"
keywords = ["asciinema", "asciicast", "demo", "terminal"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
color-eyre = "0.6"
console = { version = "0.15.7", default-features = false }
expectrl = "0.7"
indicatif = "0.17.5"
itertools = "0.11"
os_str_bytes = { version = "6", default-features = false }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serde_yaml = "0.9.22"
thiserror = "1.0.40"
which = "4.4"
